update: changed template for the year 2025-26

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-*.o
-*.elf
-*.bin
-*.hex
-*.map
+**/*.o
+**/*.elf
+**/*.bin
+**/*.hex
+**/*.map
 .mxproject
-
 **/build/
-**/Backup/*
-
 **/.vscode/*
-!**/.vscode/extensions.json
+compile_commands.json
+.cache/**
+.DS_Store
